Sat Nov  3 14:56:21 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (parse_eu): should capture apostrophe too.

Sat Nov  3 14:46:15 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (date__parse): revised the tight parser.

Sat Nov  3 14:43:42 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xmldecl.rb (REXML::XMLDecl#content): Add missing \A
	  and \z.

Sat Nov  3 14:42:55 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/output.rb (REXML::Output#initialize): Use normalized
	  encoding name.

Sat Nov  3 14:41:17 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/output.rb (REXML::Output): Don't output BOM in middle
	  of the output string.
	* test/rexml/test_document.rb: Add a test for the above change.

Sat Nov  3 14:09:55 2012  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Add an item about REXML::Document#write.

Sat Nov  3 13:46:49 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Fix tests that expect encoding name
	  isn't normalized.

Sat Nov  3 13:26:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* dir.c (Dir#glob):
	  Documentation for pattern section, backslash subsection
	  Patch by Eric Bouchut
	  [ruby-core#48528] [Bug #7230]

Sat Nov  3 13:26:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* io.c (IO#new):
	  Documentation for IO#open modes and formatting
	  [ruby-core#48052] [Bug #7179]

Sat Nov  3 13:01:02 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_encoding.rb (EncodingTester#test_in_different_out):
	  Fix a test that expects encoding in XML declaration is changed by
	  Output's encoding. It is dropped feature.

Sat Nov  3 12:49:45 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Document encoding
	  option. Now different encoding between XML file's encoding and
	  XML declaration's encoding is support.
	  [Feature #4872] (work in progress)
	* lib/rexml/xmldecl.rb (REXML::XMLDecl#write): Always use XMLDecl's